--- a/.github/workflows/ssh-agent.yml
+++ b/.github/workflows/ssh-agent.yml
@@ -26,4 +26,4 @@ jobs:
         run: ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} "touch hello-world.txt"
 
       - name: copy file to remote server
-        run: scp -P ${{secrets.SSH_PORT}} Readme.md ${{secrets.SSH_USERNAME}}@${{secrets.SSH_HOST}}:~/
+        run: scp -P ${{secrets.SSH_PORT}} README.md ${{secrets.SSH_USERNAME}}@${{secrets.SSH_HOST}}:~/
