--- a/.github/workflows/ssh-agent.yml
+++ b/.github/workflows/ssh-agent.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Login DockerHub
         run: echo '${{ secrets.DOCKER_PASSWORD }}' | docker login -u '${{ secrets.DOCKER_USERNAME}}' --password-stdin
 
-      - name: Docker Image PUsh
+      - name: Docker Image Push
         run: docker compose push
 
       - name: Copy .env / docker-compose.yml
