--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4 # 저장소의 코드를 가져오는 액션 (필수)
 
-      - name: Start Message
-        uses: sarisia/actions-status-discord@v1 # 디스코드 웹훅을 사용해 배포 시작 알림 전송
-        with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          title: "배포시작"
-
       - name: Cache Docker Image Layer
         uses: actions.cache@v4.2.0 # Docker 이미지 레이어를 캐싱하여 빌드 속도 향상
         with:
@@ -100,3 +94,15 @@ jobs:
             docker compose -f docker-compose-actions-cache.yml pull   
             docker compose -f docker-compose-actions-cache.yml down   
             docker compose -f docker-compose-actions-cache.yml up -d
+
+      - name: Start Message - seccess
+        uses: sarisia/actions-status-discord@v1 # 디스코드 웹훅을 사용해 배포 시작 알림 전송
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          title: "배포시작"
+
+      - name: Start Message - fail
+        uses: sarisia/actions-status-discord@v1 # 디스코드 웹훅을 사용해 배포 시작 알림 전송
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          title: "배포종료"
