--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4 # 저장소의 코드를 가져오는 액션 (필수)
 
       - name: Cache Docker Image Layer
-        uses: actions.cache@v4.2.0 # Docker 이미지 레이어를 캐싱하여 빌드 속도 향상
+        uses: actions/cache@v4.2.0 # Docker 이미지 레이어를 캐싱하여 빌드 속도 향상
         with:
           path: /tmp.buildx-cache # 캐싱할 경로 설정
           key: docker-image-layer-cache # 캐시 키 설정
@@ -40,7 +40,7 @@ jobs:
           echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
         # 환경 변수 파일(.env) 생성 및 GitHub Secrets에서 값 가져와 설정
 
-        # docker buildKit 엔진 설정 action(라이브러리)
+      # docker buildKit 엔진 설정 action(라이브러리)
       - name: Set up Docker buildKit
         # setiup-buildx-action
         # - 워크스페이스에 buildKit 엔진을 설치하는 action(라이브러리)
@@ -58,7 +58,6 @@ jobs:
 
       - name: Docker Image Build
         run: docker compose -f docker-compose-actions-cache.yml build --build-arg BUILDKIT_INLINE_CACHE=1
-
         # Docker Compose를 사용해 애플리케이션 빌드
 
       - name: Login DockerHub
@@ -66,7 +65,8 @@ jobs:
         # DockerHub 로그인 (GitHub Secrets에서 Docker 계정 정보 가져옴)
 
       - name: Docker Image Push
-        run: docker compose -f docker-compose-actions-cache.yml push # 빌드된 Docker 이미지를 DockerHub에 푸시
+        run: docker compose -f docker-compose-actions-cache.yml push
+        # 빌드된 Docker 이미지를 DockerHub에 푸시
 
       - name: Copy .env / docker-compose.yml
         uses: appleboy/scp-action@v0.1.7 # SCP(Secure Copy) 액션을 사용하여 파일을 원격 서버로 전송
