--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ jobs:
         uses: actions/cache@v4.2.0 # Docker 이미지 레이어를 캐싱하여 빌드 속도 향상
         with:
           path: /tmp/.buildx-cache # 캐싱할 경로 설정
-          key: docker-image-layer-cache # 캐시 키 설정
-
+          key: docker-image-layer-cache-${{ github.sha }} # 캐시 키 설정
+          restore-keys: docker-image-layer-cache
       - name: run ssh-agent
         uses: webfactory/ssh-agent@v0.9.0 # SSH 키를 사용하기 위한 SSH 에이전트 실행
         with:
