--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "save": "^2.9.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
