--- a/docker-compose-actions-cache.yml
+++ b/docker-compose-actions-cache.yml
@@ -58,8 +58,12 @@ services:
     image: wonsungjoon/frontend:latest
     ports:
       - "80:80"
+      - "443:443"
     networks:
       - backend-connect
+    volumes:
+      /etc/letsencrypt/live/13.124.175.27.sslip.io/fullchain.pem://etc/letsencrypt/live/13.124.175.27.sslip.io/fullchain.pem
+      /etc/letsencrypt/live/13.124.175.27.sslip.io/privkey.pem://etc/letsencrypt/live/13.124.175.27.sslip.io/privkey.pem
     depends_on:
       - backend
       - db
