--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -31,8 +31,8 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/3.35.156.97.sslip.io/privkey.pem;
 
         # SSL 설정
-        ssl_certificate /etc/letsencrypt/live/도메인/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/도메인/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/3.35.156.97.sslip.io/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/3.35.156.97.sslip.io/privkey.pem;
 
         # SSL 보안 설정
         ssl_protocols TLSv1.2 TLSv1.3;
