--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -22,7 +22,7 @@ http {
     gzip_vary on;
     server {
         listen 443 ssl http2;
-            server_name 3.35.156.97.sslip.id;
+        server_name 3.35.156.97.sslip.io;
 
         # SSL 인증서 설정
         # 인증서와 공개키 파일
