--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -54,7 +54,7 @@ http {
 
     server {
         listen 80;
-    
+        server_name 3.35.156.97.sslip.io;
 
         root /usr/share/nginx/html;
         index index.html;
