--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,7 +21,8 @@ http {
     gzip_static on;
     gzip_vary on;
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2;
         server_name 3.35.156.97.sslip.io;
 
         # SSL 인증서 설정
