--- a/docker-compose-actions-cache.yml
+++ b/docker-compose-actions-cache.yml
@@ -62,8 +62,8 @@ services:
     networks:
       - backend-connect
     volumes:
-      - /etc/letsencrypt/live/13.124.175.27.sslip.io/fullchain.pem:/etc/letsencrypt/live/13.124.175.27.sslip.io/fullchain.pem
-      - /etc/letsencrypt/live/13.124.175.27.sslip.io/privkey.pem:/etc/letsencrypt/live/13.124.175.27.sslip.io/privkey.pem
+      - /etc/letsencrypt/live/3.35.156.97.sslip.io/fullchain.pem:/etc/letsencrypt/live/3.35.156.97.sslip.io/fullchain.pem
+      - /etc/letsencrypt/live/3.35.156.97.sslip.io/privkey.pem:/etc/letsencrypt/live/3.35.156.97.sslip.io/privkey.pem
     depends_on:
       - backend
       - db
