--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -62,11 +62,12 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://backend-container:8080;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+             return 301 https://$host$request_uri;
+            # proxy_pass http://backend-container:8080;
+            # proxy_http_version 1.1;
+            # proxy_set_header Host $host;
+            # proxy_set_header X-Real-IP $remote_addr;
+            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }  
 }
