--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -20,54 +20,8 @@ http {
 
     gzip_static on;
     gzip_vary on;
-    server {
-        listen 443 ssl;
-        http2 on;
-        server_name 3.35.156.97.sslip.io;
 
-        # SSL 인증서 설정
-        # 인증서와 공개키 파일
-        ssl_certificate /etc/letsencrypt/live/3.35.156.97.sslip.io/fullchain.pem;
-        # 개인키 파일
-        ssl_certificate_key /etc/letsencrypt/live/3.35.156.97.sslip.io/privkey.pem;
-
-        # SSL 보안 설정
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-        ssl_prefer_server_ciphers on;
-
-        root /usr/share/nginx/html;
-        index index.html;
-
-        location / {
-            try_files $uri /index.html;
-        }
-
-        location /api/ {
-            proxy_pass http://backend-container:8080;
-            proxy_set_header Host $host;
-        }
-    }
-
-    server {
-        listen 80;
-        server_name 3.35.156.97.sslip.io;
-
-        root /usr/share/nginx/html;
-        index index.html;
- 
-        location / {
-          index index.html;
-          try_files $uri /index.html;
-        }
-
-        location /api/ {
-             return 301 https://$host$request_uri;
-            # proxy_pass http://backend-container:8080;
-            # proxy_http_version 1.1;
-            # proxy_set_header Host $host;
-            # proxy_set_header X-Real-IP $remote_addr;
-            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-    }  
+    # 모듈화시킨 서버 설정 파일을
+    # 메인 설정 파일로 불러오기(포함시키기)
+    include etc/nginx/conf.d/*.conf;
 }
