--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,7 +16,7 @@ COPY --from=build /app/dist /usr/share/nginx/html
 # CMD ["nginx", "-g", "daemon off;"]
 
 #모듈화된 서버 설정 파일을 복사
-COPY ./conf.d /etc/nginx/conf.d
+COPY ./templates /etc/nginx/templates
 COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80 443
