--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,5 +23,5 @@ http {
 
     # 모듈화시킨 서버 설정 파일을
     # 메인 설정 파일로 불러오기(포함시키기)
-    include etc/nginx/conf.d/*.conf;
+    include /etc/nginx/conf.d/*.conf;
 }
