--- a/frontend/templates/default.conf.template
+++ b/frontend/templates/default.conf.template
@@ -3,7 +3,7 @@ server {
 			listen 80;
 			server_name ${DOMAIN};
 
-			location {
+			location / {
 						return 301 https://$host$request_uri;
 			}
 	}  
