--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "save": "^2.9.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.15.10",
+    "vite": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
